[package]
name = "mycroft"
version = "0.0.1"
authors = ["Matthew Maurer <matthew.r.maurer@gmail.com>"]

[dependencies]
combine = "2.5"
error-chain = "0.11.0"
quote = "0.3"
syn = "0.11"

[dev-dependencies]
mycroft-macros = { path = "mycroft-macros" }
mycroft-support = { path = "mycroft-support" }
log = "0.3"
rand = "0.3"
