[package]
name = "mycroft-macros-impl"
version = "0.0.1"
authors = ["Matthew Maurer <matthew.r.maurer@gmail.com>"]
license = "MIT"
description = "Macro implementations for Mycroft (separated due to proc-macro-hack)"
repository = "https://github.com/maurer/mycroft"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.4"
mycroft = {path = ".."}
syn = { version = "0.11", features = ["full", "printing", "parsing"] }
combine = "2.5"
quote = "0.4"
