[package]
name = "mycroft-macros"
version = "0.1.0"
authors = ["Matthew Maurer <matthew.r.maurer@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
mycroft = {path = ".."}
# Using * here for development due to being in a workspace
# Sync to versions in master Cargo.toml before any publication
syn = { version = "*", features = ["full", "printing", "parsing"] }
combine = "*"
quote = "*"
