[package]
name = "mycroft-macros"
version = "0.0.1"
authors = ["Matthew Maurer <matthew.r.maurer@gmail.com>"]
license = "MIT"
description = "Macro implementations for Mycroft (separated due to proc-macro-hack)"
repository = "https://github.com/maurer/mycroft"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
mycroft = {path = ".."}
syn = { version = "0.15", features = ["full", "printing", "parsing", "extra-traits"] }
combine = "2.5"
quote = "0.6"
